--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "llx-cli",
+  "name": "momo-cli",
   "version": "1.0.0",
   "description": "搭建一个简易的Vue脚手架",
   "main": "index.js",
   "bin": {
-    "llx": "index.js"
+    "momo": "index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
