--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/llx123/llx-cli#readme",
   "dependencies": {
     "commander": "^8.3.0",
-    "download-git-repo": "^3.0.2"
+    "download-git-repo": "^3.0.2",
+    "open": "^8.4.0"
   }
 }
